--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,20 @@
 @tailwind components;
 @tailwind utilities;
 
+/* hivemind-project/src/index.css */
 .hero-background {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../public/fondo.webp');
     background-size: cover;
     background-position: center;
+    background-attachment: fixed; /* Efecto Parallax */
     width: 100%;
-    height: 100vh;
-    position: fixed;
+    height: 100vh; /* Asegura que la imagen de fondo ocupe toda la pantalla */
+    position: fixed; /* Cambiar a fixed para que no se mueva con el scroll */
     top: 0;
     left: 0;
-    z-index: -1;
+    z-index: -1; /* Fondo por debajo de todo el contenido */
 }
+
+
+
+
